--- a/src/Wallabag/CoreBundle/Resources/translations/validators.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.oc.yml
@@ -1,7 +1,7 @@
 validator:
-    password_must_match: 'Cal que los dos senhals siasquen los meteisses'
+    password_must_match: 'Cal que los dos senhals correspondan'
     password_too_short: 'Lo senhal deu aver almens 8 caractèrs'
     password_wrong_value: 'Vòstre senhal actual es pas bon'
     item_per_page_too_high: "Aquò li agradarà pas a l'aplicacion"
     rss_limit_too_high: "Aquò li agradarà pas a l'aplicacion"
-    # quote_length_too_high: 'The quote is too long. It should have {{ limit }} characters or less.'
+    quote_length_too_high: 'Aquesta citacion es tròpa longa. Cal que faga {{ limit }} caractèrs o mens.'
