Entry: handle originUrl in edit form, update translations
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -244,6 +244,7 @@ entry:
         page_title: 'Edit an entry'
         title_label: 'Title'
         url_label: 'Url'
+        origin_url_label: 'Origin url'
         save_label: 'Save'
     public:
         shared_by_wallabag: "This article has been shared by %username% with <a href='%wallabag_instance%'>wallabag</a>"
