--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ru.yml
@@ -46,7 +46,7 @@ footer:
         social: 'Соц. сети'
         powered_by: 'создано с помощью'
         about: 'О wallabag'
-    stats: Поскольку %user_creation% вы читаете %nb_archives% записей, это около %per_day% в день!
+    stats: "Поскольку %user_creation% вы читаете %nb_archives% записей, это около %per_day% в день!"
 
 config:
     page_title: 'Настройки'
@@ -74,8 +74,8 @@ config:
             label: 'Куда Вы хотите быть перенаправлены, после пометки записи, как прочитанная?'
             redirect_homepage: 'На домашнюю страницу'
             redirect_current_page: 'На текущую страницу'
-        pocket_consumer_key_label: Ключ от Pocket для импорта контента
-        android_configuration: Настройте Ваше Android приложение
+        pocket_consumer_key_label: "Ключ от Pocket для импорта контента"
+        android_configuration: "Настройте Ваше Android приложение"
         help_theme: "wallabag настраиваемый, здесь Вы можете выбрать тему."
         help_items_per_page: "Вы можете выбрать количество отображаемых записей на странице."
         help_reading_speed: "wallabag посчитает сколько времени занимает чтение каждой записи. Вы можете определить здесь, как быстро вы читаете. wallabag пересчитает время чтения для каждой записи."
@@ -100,17 +100,17 @@ config:
         twoFactorAuthentication_label: 'Двухфакторная аутентификация'
         help_twoFactorAuthentication: "Если Вы включите двухфакторную аутентификацию, то Вы будете получать код на указанный ранее email, каждый раз при входе в wallabag."
         delete:
-            title: Удалить мой аккаунт (или опасная зона)
-            description: Если Вы удалите ваш аккаунт, ВСЕ ваши записи, теги и другие данные, будут БЕЗВОЗВРАТНО удалены (операция не может быть отменена после). Затем Вы выйдете из системы.
-            confirm: Вы точно уверены? (Данные будут БЕЗВОЗВРАТНО удалены, эти действия необратимы)
-            button: Удалить мой аккаунт
+            title: "Удалить мой аккаунт (или опасная зона)"
+            description: "Если Вы удалите ваш аккаунт, ВСЕ ваши записи, теги и другие данные, будут БЕЗВОЗВРАТНО удалены (операция не может быть отменена после). Затем Вы выйдете из системы."
+            confirm: "Вы точно уверены? (Данные будут БЕЗВОЗВРАТНО удалены, эти действия необратимы)"
+            button: "Удалить мой аккаунт"
     reset:
-        title: Сброс данных (или опасная зона)
-        description: По нажатию на кнопки ниже, Вы сможете удалить часть данных из Вашего аккаунта. Будьте осторожны, эти действия необратимы.
-        annotations: Удалить все аннотации
-        tags: Удалить все теги
-        entries: Удалить все записи
-        confirm: Вы уверены? (Данные будут БЕЗВОЗВРАТНО удалены, эти действия необратимы)
+        title: "Сброс данных (или опасная зона)"
+        description: "По нажатию на кнопки ниже, Вы сможете удалить часть данных из Вашего аккаунта. Будьте осторожны, эти действия необратимы."
+        annotations: "Удалить все аннотации"
+        tags: "Удалить все теги"
+        entries: "Удалить все записи"
+        confirm: "Вы уверены? (Данные будут БЕЗВОЗВРАТНО удалены, эти действия необратимы)"
     form_password:
         description: "Здесь Вы можете поменять своя пароль. Ваш пароль должен быть длиннее 8 символов."
         old_password_label: 'Текущий пароль'
@@ -125,10 +125,10 @@ config:
         tags_label: 'теги'
         faq:
             title: 'FAQ'
-            tagging_rules_definition_title: 'Что значит « правило тегирования »?'
+            tagging_rules_definition_title: 'Что значит "правило тегирования"?'
             tagging_rules_definition_description: 'Правила, по которым Wallabag автоматически добавит теги для новых записей.<br />Каждый раз, при добавлении новых записей, будут проставляться теги к записям, согласно настроенным правилам тегирования, это избавит Вас от необходимости проставлять теги для каждой записи вручную.'
             how_to_use_them_title: 'Как мне их использовать?'
-            how_to_use_them_description: 'Предположим, вы хотите пометить новые записи как « <i>короткая</i> », когда на чтение уйдет меньше 3 минут.<br />В этом случае, установите « readingTime &lt;= 3 » в поле <i>Правила</i> и « <i>короткая</i> » в поле <i>Теги</i>.<br />Несколько тегов могут добавляться одновременно, разделяя их запятой: « <i>короткая, прочитать обязательно</i> »<br />Сложные правила могут быть записаны с использованием предопределенных операторов: если « <i>readingTime &gt;= 5 AND domainName = "github.com"</i> » тогда тег будет « <i>долго читать, github </i> »'
+            how_to_use_them_description: 'Предположим, вы хотите пометить новые записи как "<i>короткая</i>", когда на чтение уйдет меньше 3 минут.<br />В этом случае, установите " readingTime &lt;= 3 " в поле <i>Правила</i> и "<i>короткая</i>" в поле <i>Теги</i>.<br />Несколько тегов могут добавляться одновременно, разделяя их запятой: "<i>короткая, прочитать обязательно</i>" <br />Сложные правила могут быть записаны с использованием предопределенных операторов: если "<i>readingTime &gt;= 5 AND domainName = \"github.com\"</i> " тогда тег будет "<i>долго читать, github </i>"'
             variables_available_title: 'Какие переменные и операторы я могу использовать для написания правил?'
             variables_available_description: 'Следующие переменные и операторы могут использоваться для создания правил тегов:'
             meaning: 'Смысл'
@@ -153,7 +153,7 @@ config:
                 not_equal_to: 'Не равно...'
                 or: 'Одно правило ИЛИ другое'
                 and: 'Одно правило И другое'
-                matches: 'Тесты, в которых <i> тема </ i> соответствует <i> поиску </ i> (без учета регистра). Пример: <code> title matches "футбол" </ code>'
+                matches: 'Тесты, в которых <i> тема </i> соответствует <i> поиску </i> (без учета регистра). Пример: <code> title matches "футбол" </code>'
 
 entry:
     page_titles:
@@ -295,32 +295,32 @@ howto:
     bookmarklet:
         description: 'Drag & drop эту ссылку в ваши закладки:'
     shortcuts:
-        page_description: Здесь доступны горячие клавиши wallabag.
-        shortcut: Горячие клавиши
-        action: Действия
-        all_pages_title: Горячие клавиши на всех страницах
-        go_unread: Перейти в непрочитанные
-        go_starred: Перейти в помеченные звездочкой
-        go_archive: Перейти в архивные
-        go_all: Перейти ко всем записям
-        go_tags: Перейти в теги
-        go_config: Перейти в настройки
-        go_import: Перейти в импорт
-        go_developers: Перейти к разработчикам
-        go_howto: Перейти в howto (эта страница!)
-        go_logout: Выйти
-        list_title: Горячие клавиши, доступные на страницу списков
-        search: Отобразить форму поиска
-        article_title: Горячие клавиши доступные во время просмотра записи
-        open_original: Открыть оригинальную ссылку на запись
-        toggle_favorite: Переключить пометку звездочкой для записи
-        toggle_archive: Переключить пометку о прочтении для записи
-        delete: Удалить запись
-        material_title: Горячие клавиши доступные только в Material теме
-        add_link: Добавить новую запись
-        hide_form: Скрыть текущую форму (поисковую или новой ссылки)
-        arrows_navigation: Навигация по статьям
-        open_article: Отобразить выбранную запись
+        page_description: "Здесь доступны горячие клавиши wallabag."
+        shortcut: "Горячие клавиши"
+        action: "Действия"
+        all_pages_title: "Горячие клавиши на всех страницах"
+        go_unread: "Перейти в непрочитанные"
+        go_starred: "Перейти в помеченные звездочкой"
+        go_archive: "Перейти в архивные"
+        go_all: "Перейти ко всем записям"
+        go_tags: "Перейти в теги"
+        go_config: "Перейти в настройки"
+        go_import: "Перейти в импорт"
+        go_developers: "Перейти к разработчикам"
+        go_howto: "Перейти в howto (эта страница!)"
+        go_logout: "Выйти"
+        list_title: "Горячие клавиши, доступные на страницу списков"
+        search: "Отобразить форму поиска"
+        article_title: "Горячие клавиши доступные во время просмотра записи"
+        open_original: "Открыть оригинальную ссылку на запись"
+        toggle_favorite: "Переключить пометку звездочкой для записи"
+        toggle_archive: "Переключить пометку о прочтении для записи"
+        delete: "Удалить запись"
+        material_title: "Горячие клавиши доступные только в Material теме"
+        add_link: "Добавить новую запись"
+        hide_form: "Скрыть текущую форму (поисковую или новой ссылки)"
+        arrows_navigation: "Навигация по статьям"
+        open_article: "Отобразить выбранную запись"
 
 quickstart:
     page_title: 'Быстрый старт'
@@ -486,16 +486,16 @@ developer:
         back: 'Назад'
 
 user:
-    page_title: Управление пользователями
-    new_user: Создать нового пользователя
-    edit_user: Изменить существующего пользователя
+    page_title: "Управление пользователями"
+    new_user: "Создать нового пользователя"
+    edit_user: "Изменить существующего пользователя"
     description: "Здесь Вы можете управлять всеми пользователями (создание, изменение и удаление)"
     list:
-        actions: Действия
-        edit_action: Изменить
-        yes: Да
-        no: Нет
-        create_new_one: Создать нового пользователя
+        actions: "Действия"
+        edit_action: "Изменить"
+        yes: "Да"
+        no: "Нет"
+        create_new_one: "Создать нового пользователя"
     form:
         username_label: 'Логин'
         name_label: 'Имя'
@@ -505,14 +505,14 @@ user:
         email_label: 'Email'
         enabled_label: 'Включить'
         last_login_label: 'Последний вход'
-        twofactor_label: Двухфакторная аутентификация
-        save: Сохранить
-        delete: Удалить
-        delete_confirm: Вы уверены?
-        back_to_list: Назад к списку
+        twofactor_label: "Двухфакторная аутентификация"
+        save: "Сохранить"
+        delete: "Удалить"
+        delete_confirm: "Вы уверены?"
+        back_to_list: "Назад к списку"
 
 error:
-    page_title: Произошла ошибка
+    page_title: "Произошла ошибка"
 
 flashes:
     config:
@@ -525,9 +525,9 @@ flashes:
             tagging_rules_updated: 'Правила тегировния обновлены'
             tagging_rules_deleted: 'Правила тегировния удалены'
             rss_token_updated: 'RSS ключ обновлен'
-            annotations_reset: Аннотации сброшены
-            tags_reset: Теги сброшены
-            entries_reset: Записи сброшены
+            annotations_reset: "Аннотации сброшены"
+            tags_reset: "Теги сброшены"
+            entries_reset: "Записи сброшены"
     entry:
         notice:
             entry_already_saved: 'Запись была сохранена ранее %date%'
@@ -551,8 +551,8 @@ flashes:
             summary: 'Статистика импорта: %imported% импортировано, %skipped% уже сохранено.'
             summary_with_queue: 'Статистика импорта: %queued% в очереди.'
         error:
-            redis_enabled_not_installed: Redis включен, для приема асинхронного импорта, но похоже, что <u>мы не можем к нему подключиться</u>. Пожалуйста проверьте настройки Redis.
-            rabbit_enabled_not_installed: RabbitMQ включен, для приема асинхронного импорта, но похоже, что <u>мы не можем к нему подключиться</u>. Пожалуйста проверьте настройки RabbitMQ.
+            redis_enabled_not_installed: "Redis включен, для приема асинхронного импорта, но похоже, что <u>мы не можем к нему подключиться</u>. Пожалуйста проверьте настройки Redis."
+            rabbit_enabled_not_installed: "RabbitMQ включен, для приема асинхронного импорта, но похоже, что <u>мы не можем к нему подключиться</u>. Пожалуйста проверьте настройки RabbitMQ."
     developer:
         notice:
             client_created: 'Новый клиент %name% добавлен.'
