--- a/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
@@ -397,6 +397,9 @@ tag:
         # add: 'Add'
         # placeholder: 'You can add several tags, separated by a comma.'
 
+# export:
+#     footer_template: '<div style="text-align:center;"><p>Produced by wallabag with %method%</p><p>Please open <a href="https://github.com/wallabag/wallabag/issues">an issue</a> if you have trouble with the display of this E-Book on your device.</p></div>'
+
 import:
     # page_title: 'Import'
     # page_description: 'Welcome to wallabag importer. Please select your previous service that you want to migrate.'
