Improve origin_url field description and translations
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -244,7 +244,7 @@ entry:
         page_title: 'Eintrag bearbeiten'
         title_label: 'Titel'
         url_label: 'URL'
-        # origin_url_label: 'Origin url'
+        # origin_url_label: 'Origin url (from where you found that entry)'
         save_label: 'Speichern'
     public:
         shared_by_wallabag: 'Dieser Artikel wurde von %username% mittels <a href="%wallabag_instance%">wallabag</a> geteilt'
