Replace hardcoded 'Provided by' string with i18n string
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -233,6 +233,7 @@ entry:
         created_at: 'Creation date'
         published_at: 'Publication date'
         published_by: 'Published by'
+        provided_by: 'Provided by'
     new:
         page_title: 'Save new entry'
         placeholder: 'http://website.com'
