--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -233,6 +233,7 @@ entry:
         created_at: 'Erstellungsdatum'
         published_at: 'Erscheinungsdatum'
         published_by: 'Veröffentlicht von'
+        # provided_by: 'Provided by'
     new:
         page_title: 'Neuen Artikel speichern'
         placeholder: 'https://website.de'
