--- a/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
@@ -233,6 +233,7 @@ entry:
         created_at: 'Data di creazione'
         published_at: 'Data di pubblicazione'
         published_by: 'Pubblicato da'
+        # provided_by: 'Provided by'
     new:
         page_title: 'Salva un nuovo contenuto'
         placeholder: 'http://website.com'
