Added internal setting to enable/disable headers storage

--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.de.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.de.yml
@@ -12,6 +12,8 @@ export_xml: 'XML-Export aktivieren'
 import_with_rabbitmq: 'Aktiviere RabbitMQ, um Artikel asynchron zu importieren'
 import_with_redis: 'Aktiviere Redis, um Artikel asynchron zu importieren'
 shaarli_url: 'Shaarli-URL, sofern der Service aktiviert ist'
+scuttle_url: 'Scuttle-URL, sofern der Service aktiviert ist'
+unmark_url: 'Unmark-URL, sofern der Service aktiviert ist'
 share_diaspora: 'Teilen zu Diaspora aktiveren'
 share_mail: 'Teilen via E-Mail aktiveren'
 share_shaarli: 'Teilen zu Shaarli aktiveren'
@@ -34,3 +36,4 @@ share_public: 'Erlaube eine öffentliche URL für Einträge'
 download_images_enabled: 'Bilder lokal herunterladen'
 restricted_access: 'Authentifizierung für Webseiten mit Paywall aktivieren'
 api_user_registration: 'Registrierung eines Benutzers über die API ermöglichen'
+# store_article_headers: Enable if wallabag stores HTTP headers for each article
