--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.pt.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.pt.yml
@@ -12,6 +12,8 @@ export_xml: Habilita exportação para XML
 # import_with_rabbitmq: Enable RabbitMQ to import data asynchronously
 # import_with_redis: Enable Redis to import data asynchronously
 shaarli_url: URL Shaarli, se o serviço está habilitado
+scuttle_url: URL Scuttle, se o serviço está habilitado
+unmark_url: URL Unmark, se o serviço está habilitado
 share_diaspora: Habilitar compartilhamento para o Diaspora
 share_mail: Habilitar compartilhamento por e-mail
 share_shaarli: Habilitar compartilhamento para o Shaarli
@@ -34,3 +36,4 @@ demo_mode_username: "Usuário demo"
 # download_images_enabled: Download images locally
 # restricted_access: Enable authentication for websites with paywall
 # api_user_registration: Enable user to be registered using the API
+# store_article_headers: Enable if wallabag stores HTTP headers for each article
