--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.ru.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.ru.yml
@@ -12,6 +12,8 @@ export_xml: "Включить XML экспорт"
 import_with_rabbitmq: "Включить RabbitMQ для импорта данных(асинхронно)"
 import_with_redis: "Включить Redis для импорта данных(асинхронно)"
 shaarli_url: "Shaarli URL, если сервис включен"
+scuttle_url: "Scuttle URL, если сервис включен"
+unmark_url: "Unmark URL, если сервис включен"
 share_diaspora: "Включить возможность поделиться в соц.сети Diaspora"
 share_mail: "Включить возможность поделиться по email"
 share_shaarli: "Включить возможность поделиться в Shaarli"
@@ -33,3 +35,5 @@ demo_mode_username: "Демо пользователь"
 share_public: "Разрешить публичные ссылки на записи"
 download_images_enabled: "Скачивать изображения локально"
 restricted_access: "Включить авторизацию на сайте с помощью paywall"
+# api_user_registration: Enable user to be registered using the API
+# store_article_headers: Enable if wallabag stores HTTP headers for each article
