--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.es.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.es.yml
@@ -12,6 +12,8 @@ export_xml: Activar exportación a XML
 import_with_rabbitmq: Activar RabbitMQ para importar datos de forma asíncrona
 import_with_redis: Activar Redis para importar datos de forma asíncrona
 shaarli_url: URL de Shaarli, si el servicio está activado
+scuttle_url: URL de Scuttle, si el servicio está activado
+unmark_url: URL de Unmark, si el servicio está activado
 share_diaspora: Activar compartir con Diaspora
 share_mail: Activar compartir con Email
 share_shaarli: Activar compartir con Shaarli
@@ -34,3 +36,4 @@ share_public: Permitir URL pública para los artículos
 download_images_enabled: Descargar imágenes localmente
 restricted_access: Activar autenticación para websites con paywall
 # api_user_registration: Enable user to be registered using the API
+# store_article_headers: Enable if wallabag stores HTTP headers for each article
