--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.tr.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.tr.yml
@@ -12,6 +12,8 @@
 # import_with_rabbitmq: Enable RabbitMQ to import data asynchronously
 # import_with_redis: Enable Redis to import data asynchronously
 # shaarli_url: Shaarli URL, if the service is enabled
+# scuttle_url: Scuttle URL, if the service is enabled
+# unmark_url: Unmark URL, if the service is enabled
 # share_diaspora: Enable share to Diaspora
 # share_mail: Enable share by email
 # share_shaarli: Enable share to Shaarli
@@ -35,3 +37,4 @@
 # download_images_enabled: Download images locally
 # restricted_access: Enable authentication for websites with paywall
 # api_user_registration: Enable user to be registered using the API
+# store_article_headers: Enable if wallabag stores HTTP headers for each article
