Add craue setting to enable sharing of origin url to Shaarli
Also fix the field name used in the query string and add it to baggy
theme

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.en.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.en.yml
@@ -37,3 +37,4 @@ download_images_enabled: Download images locally
 restricted_access: Enable authentication for paywalled websites
 api_user_registration: Enable user to be registered using the API
 store_article_headers: Enable if wallabag stores HTTP headers for each article
+shaarli_share_origin_url: Enable sharing origin url to Shaarli, if the service is enabled
