--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.fr.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.fr.yml
@@ -37,3 +37,4 @@ download_images_enabled: Télécharger les images en local
 restricted_access: Activer l'authentification pour les articles derrière un paywall
 api_user_registration: Activer la création de compte depuis l'API
 store_article_headers: Activer le stockage des en-têtes HTTP de chaque article
+shaarli_share_origin_url: Activer le partage de l'adresse d'origine vers Shaarli, si le service est activé
