--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.de.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.de.yml
@@ -37,3 +37,4 @@ download_images_enabled: 'Bilder lokal herunterladen'
 restricted_access: 'Authentifizierung für Webseiten mit Paywall aktivieren'
 api_user_registration: 'Registrierung eines Benutzers über die API ermöglichen'
 # store_article_headers: Enable if wallabag stores HTTP headers for each article
+# shaarli_share_origin_url: Enable sharing origin url to Shaarli, if the service is enabled
