--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.es.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.es.yml
@@ -37,3 +37,4 @@ download_images_enabled: Descargar imágenes localmente
 restricted_access: Activar autenticación para websites con paywall
 # api_user_registration: Enable user to be registered using the API
 # store_article_headers: Enable if wallabag stores HTTP headers for each article
+# shaarli_share_origin_url: Enable sharing origin url to Shaarli, if the service is enabled
