--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.ru.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.ru.yml
@@ -37,3 +37,4 @@ download_images_enabled: "Скачивать изображения локаль
 restricted_access: "Включить авторизацию на сайте с помощью paywall"
 # api_user_registration: Enable user to be registered using the API
 # store_article_headers: Enable if wallabag stores HTTP headers for each article
+# shaarli_share_origin_url: Enable sharing origin url to Shaarli, if the service is enabled
